--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -31,6 +31,10 @@
             text-decoration: none;
         }
 
+        &__rights {
+            display: none;
+        }
+
         &__email {
             font-size: 1.125em;
             color: $primary-background;
@@ -67,6 +71,10 @@
             @include centerSelf();
             border-radius: 100%;
             text-decoration: none;
+        }
+
+        &__rights {
+            display: none;
         }
 
         &__email {
