--- a/styles/_skills.scss
+++ b/styles/_skills.scss
@@ -3,7 +3,6 @@
 
 @media screen and (max-width: 480px) {
     .skills {
-        height: 95vh;
         margin: 4em $section-margin;
         text-align: center;
 
@@ -39,7 +38,6 @@
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
     .skills {
-        height: 95vh;
         margin: 4em $section-margin;
         text-align: center;
 
